Fixes momentum scrolling on iOS.

--- a/app/assets/stylesheets/map.scss
+++ b/app/assets/stylesheets/map.scss
@@ -5,7 +5,8 @@
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: auto;
+    overflow-y:scroll;
+    -webkit-overflow-scrolling: touch;
   }
 
   .header-image {
